tool: add pfm-to-exr tool

--- a/training/tools/Makefile
+++ b/training/tools/Makefile
@@ -1,4 +1,4 @@
-all: image-pre-processor pfm-debug exr-to-pfm
+all: image-pre-processor pfm-debug exr-to-pfm pfm-to-exr
 
 #OPT=-g3 -O3 -march=native
 OPT=-g3 -O0
@@ -20,6 +20,9 @@ image-pre-processor: image-pre-processor.cc
 
 exr-to-pfm: exr-to-pfm.cc
 	$(CXX) -o $(@) $(^) $(CXXFLAGS) $(LDFLAGS) `pkg-config --cflags --libs OpenEXR libpng`
+
+pfm-to-exr: pfm-to-exr.cc
+	$(CXX) -o $(@) $(^) $(CXXFLAGS) $(LDFLAGS) `pkg-config --cflags --libs OpenEXR`
 
 clean:
 	rm -f image-pre-processor pfm-debug exr-to-pfm
