image-pre-processor: create pool of worker threads for processing
On a Razerblade laptop with a 4 core Kabylake i7-7700HQ @ 2.8GHz running with
8 threads then it now takes ~40 minutes to process ~120k frames (224x172px)
under Windows Subsystem for Linux.

--- a/training/tools/Makefile
+++ b/training/tools/Makefile
@@ -16,7 +16,7 @@ pfm-debug: pfm-debug.c
 	$(CC) -o $(@) $(^) $(CFLAGS) $(LDFLAGS)
 
 image-pre-processor: image-pre-processor.cc
-	$(CXX) -o $(@) $(^) $(CXXFLAGS) $(LDFLAGS) `pkg-config --cflags --libs OpenEXR libpng`
+	$(CXX) -o $(@) $(^) $(CXXFLAGS) $(LDFLAGS) `pkg-config --cflags --libs OpenEXR libpng` -lpthread
 
 exr-to-pfm: exr-to-pfm.cc
 	$(CXX) -o $(@) $(^) $(CXXFLAGS) $(LDFLAGS) `pkg-config --cflags --libs OpenEXR libpng`
