training/labelling: Split out tree loading and inference from binary

--- a/training/labelling/Makefile
+++ b/training/labelling/Makefile
@@ -1,4 +1,4 @@
-all: train infer
+all: train depth2labels
 
 CFLAGS ?= -O0 -g -Wall
 LDFLAGS ?= 
@@ -7,8 +7,8 @@ CXX ?= g++
 train: train.cc xalloc.cc llist.cc utils.h
 	$(CXX) -o $(@) $(^) $(CFLAGS) -std=c++11 -lrt $(LDFLAGS) `pkg-config --cflags --libs OpenEXR libpng`
 
-infer: infer.cc xalloc.cc utils.h
+depth2labels: depth2labels.cc infer.cc xalloc.cc utils.h loader.cc
 	$(CXX) -o $(@) $(^) $(CFLAGS) $(LDFLAGS) `pkg-config --cflags --libs OpenEXR libpng`
 
 clean:
-	rm -f train infer
+	rm -f train depth2labels
