Define pack file format, API and pack-training-data tool
This defines a binary pack format for our training data with a shareable
utility api for reading and writing.

This adds a pack-training-data tool that takes the data output by
Blender and writes it to one of these pack files.

Pack files are intended to be an efficient way of managing large streams
of training data organised logically into 'frames'.

Frames are split into 'sections' so e.g. their might be a "depth" buffer
section, a color "labels" section and a miscellaneous "json" meta data
section for each frame.

Each section is separately compressed using Snappy to help reduce IO
while reading data but minimize CPU overhead before being able to
process the data.

The format supports some simple (key, value) properties that may be
either associated with the pack file or individual frames. (int64,
double, string or an arbitrary 'blob' of data)

Some pack file requirements:

- Optimized for reading frames sequentially.
- Want to be able to append frames to pack file without re-writing exiting
  frames
- Want to be able to add/edit some properties without re-writing entire
  file
- It should be easy to create a new pack file based on an existing file
  but adding/removing/editing the sections of each frame.
- If writing a new file with additional sections then it should be possible
  to easily copy across unknown sections from the previous file without
  uncompressing or decoding them.
- It should be straight forward to be able to shuffle a pack file.
- Ideally header properties can be changed without re-writing all following
  frame data.

--- a/training/tools/Makefile
+++ b/training/tools/Makefile
@@ -1,4 +1,4 @@
-all: image-pre-processor pfm-debug exr-to-pfm pfm-to-exr
+all: pack-training-data image-pre-processor pfm-debug exr-to-pfm pfm-to-exr
 
 #OPT ?= -g3 -O3 -march=native
 OPT ?= -g3 -O0 -DDEBUG
@@ -11,6 +11,9 @@ CXXFLAGS ?= $(OPT)
 CXXFLAGS += -std=c++14 -Wall
 
 LDFLAGS=
+
+pack-training-data: pack-training-data.cc llist.cc xalloc.cc pack.c
+	$(CXX) -o $(@) $(^) $(CXXFLAGS) $(LDFLAGS) `pkg-config --cflags --libs libpng` -lsnappy -lpthread
 
 image-pre-processor: image-pre-processor.cc
 	$(CXX) -o $(@) $(^) $(CXXFLAGS) $(LDFLAGS) `pkg-config --cflags --libs OpenEXR libpng` -lpthread
@@ -25,4 +28,4 @@ pfm-to-exr: pfm-to-exr.cc
 	$(CXX) -o $(@) $(^) $(CXXFLAGS) $(LDFLAGS) `pkg-config --cflags --libs OpenEXR`
 
 clean:
-	rm -f image-pre-processor pfm-debug exr-to-pfm pfm-to-exr
+	rm -f pack-training-data image-pre-processor pfm-debug exr-to-pfm pfm-to-exr
