--- a/training/tools/Makefile
+++ b/training/tools/Makefile
@@ -16,16 +16,16 @@ pack-training-data: pack-training-data.cc llist.cc xalloc.cc pack.c
 	$(CXX) -o $(@) $(^) $(CXXFLAGS) $(LDFLAGS) `pkg-config --cflags --libs libpng` -lsnappy -lpthread
 
 image-pre-processor: image-pre-processor.cc
-	$(CXX) -o $(@) $(^) $(CXXFLAGS) $(LDFLAGS) `pkg-config --cflags --libs OpenEXR libpng` -lpthread
+	$(CXX) -o $(@) $(^) $(CXXFLAGS) $(LDFLAGS) `pkg-config --cflags --libs libpng` -lpthread
 
 pfm-debug: pfm-debug.c
 	$(CC) -o $(@) $(^) $(CFLAGS) $(LDFLAGS)
 
 exr-to-pfm: exr-to-pfm.cc
-	$(CXX) -o $(@) $(^) $(CXXFLAGS) $(LDFLAGS) `pkg-config --cflags --libs OpenEXR libpng`
+	$(CXX) -o $(@) $(^) $(CXXFLAGS) $(LDFLAGS) `pkg-config --cflags --libs libpng`
 
 pfm-to-exr: pfm-to-exr.cc
-	$(CXX) -o $(@) $(^) $(CXXFLAGS) $(LDFLAGS) `pkg-config --cflags --libs OpenEXR`
+	$(CXX) -o $(@) $(^) $(CXXFLAGS) $(LDFLAGS)
 
 clean:
 	rm -f pack-training-data image-pre-processor pfm-debug exr-to-pfm pfm-to-exr
