training/Makefile fix for ensuring -std=c++14 is passed if CXXFLAGS overriden

--- a/training/Makefile
+++ b/training/Makefile
@@ -3,12 +3,13 @@ OPT ?= -g3 -O0 -DDEBUG
 
 CC ?= gcc
 CFLAGS ?= $(OPT)
-CFLAGS += -Wall
 CXX ?= g++
 CXXFLAGS ?= $(OPT)
-CXXFLAGS += -std=c++14 -Wall
 
 LDFLAGS ?=
+
+_CFLAGS = $(CFLAGS) -Wall
+_CXXFLAGS = $(CXXFLAGS) -std=c++14 -Wall
 
 TOOLS = image-pre-processor \
 	train_rdt \
@@ -22,28 +23,28 @@ TOOLS = image-pre-processor \
 all: $(TOOLS)
 
 image-pre-processor: image-pre-processor.cc parson.c half.hpp
-	$(CXX) -o $(@) $(^) $(CXXFLAGS) $(LDFLAGS) `pkg-config --cflags --libs libpng` -lpthread
+	$(CXX) -o $(@) $(^) $(_CXXFLAGS) $(LDFLAGS) `pkg-config --cflags --libs libpng` -lpthread
 
 train_rdt: train_rdt.cc xalloc.cc llist.cc utils.h train_utils.cc
-	$(CXX) -o $(@) $(^) $(CXXFLAGS) -lrt $(LDFLAGS) `pkg-config --cflags --libs OpenEXR libpng`
+	$(CXX) -o $(@) $(^) $(_CXXFLAGS) -lrt $(LDFLAGS) `pkg-config --cflags --libs OpenEXR libpng`
 
 train_joint_params: train_joint_params.cc infer.cc xalloc.cc llist.cc utils.h train_utils.cc loader.cc
-	$(CXX) -o $(@) $(^) $(CXXFLAGS) -lrt $(LDFLAGS) `pkg-config --cflags --libs OpenEXR libpng`
+	$(CXX) -o $(@) $(^) $(_CXXFLAGS) -lrt $(LDFLAGS) `pkg-config --cflags --libs OpenEXR libpng`
 
 depth2labels: depth2labels.cc infer.cc xalloc.cc utils.h loader.cc
-	$(CXX) -o $(@) $(^) $(CXXFLAGS) $(LDFLAGS) `pkg-config --cflags --libs OpenEXR libpng`
+	$(CXX) -o $(@) $(^) $(_CXXFLAGS) $(LDFLAGS) `pkg-config --cflags --libs OpenEXR libpng`
 
 exr-to-pfm: exr-to-pfm.cc half.hpp
-	$(CXX) -o $(@) $(^) $(CXXFLAGS) $(LDFLAGS) `pkg-config --cflags --libs libpng`
+	$(CXX) -o $(@) $(^) $(_CXXFLAGS) $(LDFLAGS) `pkg-config --cflags --libs libpng`
 
 pfm-to-exr: pfm-to-exr.cc half.hpp
-	$(CXX) -o $(@) $(^) $(CXXFLAGS) $(LDFLAGS)
+	$(CXX) -o $(@) $(^) $(_CXXFLAGS) $(LDFLAGS)
 
 pfm-debug: pfm-debug.c
-	$(CC) -o $(@) $(^) $(CFLAGS) $(LDFLAGS)
+	$(CC) -o $(@) $(^) $(_CFLAGS) $(LDFLAGS)
 
 pack-training-data: pack-training-data.cc llist.cc xalloc.cc pack.c half.hpp
-	$(CXX) -o $(@) $(^) $(CXXFLAGS) $(LDFLAGS) `pkg-config --cflags --libs libpng` -lsnappy -lpthread
+	$(CXX) -o $(@) $(^) $(_CXXFLAGS) $(LDFLAGS) `pkg-config --cflags --libs libpng` -lsnappy -lpthread
 
 clean:
 	-rm -f $(TOOLS)
