training/Makefile: add RELEASE=1 convenient option
Possibly some value in ensuring we use consistent flags for optimized
builds, but also saves a little typing. By default running make will
build with debug options, passing RELEASE=1 will instead build with
-march=native -mtune=native. Still possible to override CFLAGS/CXXFLAGS
explicitly though.

--- a/training/Makefile
+++ b/training/Makefile
@@ -1,5 +1,10 @@
-#OPT ?= -g3 -O3 -march=native -mtune=native
-OPT ?= -g3 -O0 -DDEBUG
+ifndef OPT
+ifeq ($(RELEASE), 1)
+OPT = -g3 -O3 -march=native -mtune=native
+else
+OPT = -g3 -O0 -DDEBUG
+endif
+endif
 
 CC ?= gcc
 CFLAGS ?= $(OPT)
