--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,19 @@ __pycache__
 *.swp
 tags
 cscope.*
+*.o
+training/.deps
+training/depth2labels
+training/exr-to-pfm
+training/image-pre-processor
+training/libglimpse.so
+training/pack-training-data
+training/pfm-debug
+training/pfm-to-exr
+training/train_joint_params
+training/train_rdt
+training/python/build
+training/python/dist
+training/python/glimpse.egg-info
+training/python/glimpse.py
+training/python/glimpse_wrap.cpp
