Add rdt-to-json tool
To help keep the output of train_rdt transparent this makes it easier to
check and access the data e.g. from Python and JavaScript tools.

The schema looks like:

  {
    "n_labels": 34,
    "vertical_fov": 50.4,
    "depth": 20,
    "root": {
      "t": 0.5,            // threshold
      "u": [  3, -0.5 ],   // U vector
      "v": [ -2, 10.1 ],   // V vector

      // left node...
      "l": {
        // children directly nested...
        "t": 0.2,          // child's threshold
        "u": [  1, -5.2 ], // child's U vector
        "v": [ -7, -0.1 ], // child's V vector
        "l": { ... },      // child's left node
        "r": { ... },      // child's right node
      },

      // right node is an example leaf node with <n_labels> label
      // probabilities...
      "r": {
        "p": [0, 0, 0, 0.2, 0, 0.2, 0, 0.6, 0, 0 ... ],
      }
    }
  }

--- a/training/Makefile
+++ b/training/Makefile
@@ -25,6 +25,7 @@ TOOLS = image-pre-processor \
 	depth2labels \
 	exr-to-pfm \
 	pfm-to-exr \
+	rdt-to-json \
 	pfm-debug \
 	pack-training-data
 
@@ -53,6 +54,10 @@ exr-to-pfm: exr-to-pfm.o tinyexr.o
 	$(E)$(CXX) -o $(@) $(^) $(_CXXFLAGS) $(LDFLAGS) `pkg-config --libs libpng`
 
 pfm-to-exr: pfm-to-exr.o tinyexr.o
+	$(E)echo "(LD)      $(@)"
+	$(E)$(CXX) -o $(@) $(^) $(_CXXFLAGS) $(LDFLAGS)
+
+rdt-to-json: rdt-to-json.o loader.o parson.o llist.o xalloc.o
 	$(E)echo "(LD)      $(@)"
 	$(E)$(CXX) -o $(@) $(^) $(_CXXFLAGS) $(LDFLAGS)
 
