training/python: Finish renaming methods and force clean on build

--- a/training/python/Makefile
+++ b/training/python/Makefile
@@ -1,5 +1,5 @@
 
-default: setup.cfg setup.py glimpse.i numpy.i glimpse_python.cc glimpse_python.h __init__.py
+default: clean setup.cfg setup.py glimpse.i numpy.i glimpse_python.cc glimpse_python.h __init__.py
 	./setup.py bdist_wheel
 
 clean:
