--- a/training/Makefile
+++ b/training/Makefile
@@ -26,7 +26,7 @@ TOOLS = image-pre-processor \
 	pack-training-data \
 	glimpse_viewer
 
-LIBS = libglimpse.so
+LIBS = libglimpse.so libglimpse-unity-plugin.so
 
 IMGUI_OBJS=\
 	imgui/imgui.o \
@@ -50,6 +50,7 @@ _CPPFLAGS = \
 	-Iimgui \
 	-DGLM_ENABLE_EXPERIMENTAL=1 \
 	-I$(THIRD_PARTY_INCLUDE) \
+	-IUnityPluginAPI \
 	`pkg-config --cflags libpng libfreenect`
 
 
@@ -106,6 +107,10 @@ libglimpse.so: xalloc.o tinyexr.o llist.o loader.o infer.o parson.o image_utils.
 glimpse_viewer: glimpse_viewer.o glimpse_context.o infer.o parson.o loader.o parson.o xalloc.o image_utils.o tinyexr.o $(IMGUI_OBJS)
 	$(E)echo "(LD)      $(@)"
 	$(E)$(CXX) -o $(@) $(^) $(_CXXFLAGS) $(_LDFLAGS) -lpthread -lpcl_common -lpcl_features -lpcl_filters -lpcl_io_ply -lpcl_io -lpcl_kdtree -lpcl_keypoints -lpcl_ml -lpcl_octree -lpcl_recognition -lpcl_registration -lpcl_sample_consensus -lpcl_search -lpcl_segmentation -lpcl_stereo -lpcl_surface -lpcl_tracking -ldlib -lopencv_core -lopencv_objdetect -lflann_cpp -lpng -lboost_date_time -lboost_iostreams -lboost_filesystem -lboost_wserialization -lboost_serialization -lboost_thread -lboost_system -llapack -lcblas -lusb-1.0 `pkg-config --libs libfreenect libpng glfw3 epoxy`
+
+libglimpse-unity-plugin.so: glimpse_unity.o glimpse_context.o infer.o parson.o loader.o parson.o xalloc.o $(IMGUI_OBJS)
+	$(E)echo "(LD)      $(@)"
+	$(E)$(CXX) -shared -o $(@) $(^) $(_CXXFLAGS) $(_LDFLAGS) -lpthread -lpcl_common -lpcl_features -lpcl_filters -lpcl_io_ply -lpcl_io -lpcl_kdtree -lpcl_keypoints -lpcl_ml -lpcl_octree -lpcl_recognition -lpcl_registration -lpcl_sample_consensus -lpcl_search -lpcl_segmentation -lpcl_stereo -lpcl_surface -lpcl_tracking -ldlib -lopencv_core -lopencv_objdetect -lflann_cpp -lpng -lboost_date_time -lboost_iostreams -lboost_filesystem -lboost_wserialization -lboost_serialization -lboost_thread -lboost_system -llapack -lcblas -lusb-1.0 `pkg-config --libs libfreenect libpng glfw3 epoxy`
 
 %.o: %.c Makefile | dirs
 	$(E)echo "(CC)      $(@)"
