training: Add infer_joints_fast
Use a basic 2d clustering algorithm and ignore bandwidth as an alternative
to mean-shift.

--- a/meson.build
+++ b/meson.build
@@ -73,6 +73,7 @@ src = [
     'training/loader.cc',
     'training/xalloc.c',
     'training/image_utils.cc',
+    'training/llist.c',
 
     'training/tinyexr.cc',
     'training/parson.c',
