move training/ to src/
The training directory has become a very general-purpose dumping ground
for source code so the name no longer makes sense.

--- a/.gitignore
+++ b/.gitignore
@@ -3,19 +3,19 @@ __pycache__
 tags
 cscope.*
 *.o
-training/.deps
-training/depth2labels
-training/exr-to-pfm
-training/image-pre-processor
-training/libglimpse.so
-training/pack-training-data
-training/pfm-debug
-training/pfm-to-exr
-training/rdt-to-json
-training/train_joint_params
-training/train_rdt
-training/python/build
-training/python/dist
-training/python/glimpse.egg-info
-training/python/glimpse.py
-training/python/glimpse_wrap.cpp
+src/.deps
+src/depth2labels
+src/exr-to-pfm
+src/image-pre-processor
+src/libglimpse.so
+src/pack-training-data
+src/pfm-debug
+src/pfm-to-exr
+src/rdt-to-json
+src/train_joint_params
+src/train_rdt
+src/python/build
+src/python/dist
+src/python/glimpse.egg-info
+src/python/glimpse.py
+src/python/glimpse_wrap.cpp
