Add a logger api
So we can consistently route logging messages to the
app/plugin/middleware this adds a logging api.

In particular this will allow the unity plugin to route log messages so
they will be visible to users within the editor.

--- a/meson.build
+++ b/meson.build
@@ -69,6 +69,7 @@ src = [
     'src/glimpse_context.cc',
     'src/glimpse_device.cc',
     'src/glimpse_assets.c',
+    'src/glimpse_log.c',
 
     'src/infer.cc',
     'src/loader.cc',
